Изменение небольших ошибок

--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -124,6 +124,7 @@
             android:layout_marginBottom="10dp"
             app:endIconCheckable="true"
             app:prefixText="c "
+            app:prefixTextColor="@color/hint_color"
             app:prefixTextAppearance="@style/text_medium_16_style"
             app:endIconDrawable="@drawable/calendar"
             app:endIconMode="custom"
@@ -153,7 +154,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:endIconCheckable="true"
-            app:prefixText="c "
+            app:prefixText="c"
+            app:prefixTextColor="@color/hint_color"
             app:prefixTextAppearance="@style/text_medium_16_style"
             app:endIconDrawable="@drawable/watch"
             app:endIconMode="custom"
