--- a/app/src/main/res/layout/activity_profile_organizator.xml
+++ b/app/src/main/res/layout/activity_profile_organizator.xml
@@ -24,17 +24,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageUser"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:src="@drawable/camera"
-        android:padding="30dp"
-        android:background="@drawable/round_button"
+        android:scaleType="center"
+        app:shapeAppearanceOverlay="@style/circular_image"
+        android:background="@color/stroke_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nickUser" />
+
+    <ProgressBar
+        android:id="@+id/progressBarImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/imageUser"
+        app:layout_constraintEnd_toEndOf="@+id/imageUser"
+        app:layout_constraintStart_toStartOf="@+id/imageUser"
+        app:layout_constraintTop_toTopOf="@+id/imageUser" />
 
     <LinearLayout
         android:layout_width="0dp"
