--- a/app/src/main/res/layout/item_followers.xml
+++ b/app/src/main/res/layout/item_followers.xml
@@ -4,18 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        app:shapeAppearanceOverlay="@style/circular_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="5dp"
         android:layout_marginVertical="10dp"
-        android:background="@drawable/round_button"
+        android:background="@color/stroke_color"
         android:scaleType="center"
         android:src="@drawable/camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/view" />
+
+    <ProgressBar
+        android:id="@+id/progressBarImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/image"
+        app:layout_constraintEnd_toEndOf="@+id/image"
+        app:layout_constraintStart_toStartOf="@+id/image"
+        app:layout_constraintTop_toTopOf="@+id/image" />
 
     <TextView
         android:id="@+id/name"
@@ -23,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:text="Эйфория"
         android:textColor="@color/main_text_color"
         app:layout_constraintStart_toEndOf="@+id/image"
@@ -45,7 +55,7 @@
         style="@style/text_medium_12_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:text="232 подписчиков"
         android:textColor="@color/secondary_text_color"
         app:layout_constraintBottom_toBottomOf="@+id/image"
