--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -56,6 +56,17 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
+            <ImageButton
+                android:id="@+id/btnDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@null"
+                android:padding="5dp"
+                android:src="@drawable/trash"
+                app:layout_constraintBottom_toBottomOf="@+id/imageUser"
+                app:layout_constraintStart_toEndOf="@+id/imageUser" />
+
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imageUser"
                 android:layout_width="130dp"
