--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,10 @@
         <item name="cornerSizeBottomLeft">10dp</item>
     </style>
 
+    <style name="rounded_all_image">
+        <item name="cornerSize">10dp</item>
+    </style>
+
     <style name="bottom_navigation">
         <item name="backgroundTint">@null</item>
         <item name="itemTextAppearanceActive">@style/TextAppearance.BottomNavigationView.Active</item>
