--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
+        android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -29,20 +30,20 @@
         app:layout_constraintTop_toBottomOf="@+id/icon">
 
         <TextView
+            style="@style/text_bold_30_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="14dp"
             android:text="Регистрация"
-            android:textColor="@color/main_text_color"
-            style="@style/text_bold_30_style" />
+            android:textColor="@color/main_text_color" />
 
         <TextView
+            style="@style/text_medium_16_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/main_text_color"
-            style="@style/text_medium_16_style"
-            android:text="E-mail" />
+            android:text="E-mail"
+            android:textColor="@color/main_text_color" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/container_email"
@@ -53,48 +54,48 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_email"
+                style="@style/edit_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:lines="1"
-                style="@style/edit_text_style"
+                android:background="@drawable/edit_text_selector"
                 android:inputType="textEmailAddress"
-                android:background="@drawable/edit_text_selector" />
+                android:lines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            style="@style/text_medium_16_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/main_text_color"
-            style="@style/text_medium_16_style"
-            android:text="Пароль" />
+            android:text="Пароль"
+            android:textColor="@color/main_text_color" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/container_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
             android:layout_marginBottom="10dp"
-            app:passwordToggleTint="@color/hint_color"
-            app:helperTextTextAppearance="@style/helper_text_medium_12_style_over">
+            app:helperTextTextAppearance="@style/helper_text_medium_12_style_over"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/hint_color">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_password"
+                style="@style/edit_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:lines="1"
-                style="@style/edit_text_style"
+                android:background="@drawable/edit_text_selector"
                 android:inputType="textPassword"
-                android:background="@drawable/edit_text_selector" />
+                android:lines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            style="@style/text_medium_16_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/main_text_color"
-            style="@style/text_medium_16_style"
-            android:text="Повтор пароля" />
+            android:text="Повтор пароля"
+            android:textColor="@color/main_text_color" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/container_password_repeat"
@@ -102,21 +103,46 @@
             android:layout_height="wrap_content"
             app:helperTextTextAppearance="@style/helper_text_medium_12_style_over">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/text_password_repeat"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:lines="1"
-            style="@style/edit_text_style"
-            android:inputType="textPassword"
-            android:background="@drawable/edit_text_selector" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/text_password_repeat"
+                style="@style/edit_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/edit_text_selector"
+                android:inputType="textPassword"
+                android:lines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
+    <CheckBox
+        android:id="@+id/checkBoxRules"
+        style="@style/text_medium_16_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:button="@drawable/check_box"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="5dp"
+        android:text="С правилами ознакомлен(а)"
+        android:textColor="@color/main_text_color"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
+
+    <TextView
+        android:id="@+id/text_error"
+        style="@style/helper_text_medium_12_style_over"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:visibility="gone"
+        android:text="Ознакомьтесь с правилами"
+        app:layout_constraintStart_toStartOf="@+id/checkBoxRules"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxRules" />
+
     <LinearLayout
 
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -125,20 +151,20 @@
 
         <Button
             android:id="@+id/toLogIn"
+            style="@style/button_secondary_style"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_weight="2"
-            style="@style/button_secondary_style"
             android:background="@drawable/button_secondary_color_selector"
             android:text="Войти" />
 
         <Button
             android:id="@+id/goReg"
+            style="@style/button_main_style"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            style="@style/button_main_style"
             android:background="@drawable/button_main_color_selector"
             android:text="Зарегистрироваться" />
 
