Добавлено пользовательское соглашение

--- a/app/src/main/res/layout/activity_party.xml
+++ b/app/src/main/res/layout/activity_party.xml
@@ -37,6 +37,7 @@
             android:id="@+id/btnRe"
             android:layout_width="45dp"
             android:layout_height="45dp"
+            android:visibility="gone"
             android:background="@drawable/background_round_button"
             android:src="@drawable/pencil"
             android:layout_marginTop="20dp"
@@ -48,6 +49,7 @@
             android:id="@+id/btnDelete"
             android:layout_width="45dp"
             android:layout_height="45dp"
+            android:visibility="gone"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/background_round_button"
